# silentkeys

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  components.css  index.html  styles.css
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
src/: api.rs  app.rs  main.rs  utils.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  app.rs  audio_processing.rs  commands.rs  desktop.rs  diagnostics.rs  dictation.rs  engine.rs  error.rs  errors.rs  lib.rs  main.rs  recording.rs  settings.rs  streaming.rs  updater.rs  vad.rs
src-tauri/src/asr/: audio_io.rs  decoder.rs  download_progress.rs  mod.rs  model_store.rs  recognizer.rs  tests.rs
src-tauri/src/asr/decoder/: mod.rs  search.rs  session.rs  state.rs
src-tauri/src/asr/model_store/: download.rs  mod.rs  paths.rs  verification.rs
src-tauri/src/asr/recognizer/: config.rs  inference.rs  mod.rs  model.rs
src-tauri/src/desktop/: mod.rs  shortcuts.rs  tray.rs  typing.rs
src-tauri/src/recording/: audio_thread.rs  mod.rs
src-tauri/src/settings/: service.rs  transaction.rs
src-tauri/src/streaming/: decoding.rs  hypothesis.rs  mod.rs  pipeline.rs  word_aggregation.rs  word_hypothesis.rs  words.rs
src-tauri/tests/: activity_tests.rs  asr_tests.rs  audio_processing_tests.rs  desktop_tests.rs  exact_match_tests.rs  model_store_tests.rs  recording_tests.rs  settings_transaction_tests.rs  streaming_tests.rs  text_delivery_tests.rs  updater_tests.rs  vad_tests.rs  wer_corpus_tests.rs  word_aggregation_tests.rs  word_hypothesis_tests.rs
src-tauri/tests/corpus/: v1.json
src-tauri/tests/samples/: transcript.txt
src/components/: mod.rs  recorder.rs  settings.rs
