[package]
name = "silent-keys-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.14", features = ["csr"] }
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
js-sys = "0.3.83"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

[workspace]
members = ["src-tauri"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
