[package]
name = "silent-keys"
version = "0.2.0"
description = "Real-time, fully offline desktop dictation."
authors = ["gptguy"]
edition = "2021"
default-run = "silent-keys"

[features]
default = []

[lib]
name = "silent_keys_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.4", features = ["tray-icon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ndarray = "0.16.1"
regex = "1.12.2"
log = "0.4.29"
thiserror = "2.0.17"
ort = "2.0.0-rc.10"
num_cpus = "1.17.0"
enigo = "0.6.1"
ureq = { version = "3.1.4", features = ["json", "charset"] }
dirs-next = "2.0.0"
cpal = "0.17.0"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-store = "2.4.1"
tauri-plugin-log = "2.7.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-global-shortcut = "2.3.1"
rtrb = "0.3.2"
rubato = "0.16.2"

[dev-dependencies]
env_logger = "0.11.8"
hound = "3.5.1"
