[package]
name = "silent-keys"
version = "0.3.0"
description = "Real-time, local-first desktop dictation."
authors = ["gptguy"]
edition = "2021"
default-run = "silent-keys"

[features]
default = []

[lib]
name = "silent_keys_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = ["tray-icon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
log = "0.4.33"
thiserror = "2.0.18"
sha2 = "0.10.9"
sys-locale = "0.3.2"
parakeet-rs = "0.3.6"
enigo = "0.6.1"
ureq = { version = "3.3.0", features = ["json", "charset"] }
dirs-next = "2.0.0"
cpal = "0.18.1"
tauri-plugin-single-instance = "2.4.3"
tauri-plugin-store = "2.4.3"
tauri-plugin-log = "2.9.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-updater = "2.10.1"
rtrb = "0.3.4"
rubato = { version = "4.0.0", default-features = false }

[dev-dependencies]
env_logger = "0.11.11"
hound = "3.5.1"
unicode-segmentation = "1.13.3"
